Prevent Imgur gallery nav buttons from wrapping around div
If .imgur element width is <= 50% then the button will have enough space to wrap around.
Setting min-width to 51% prevents this from happening

--- a/src/css/allpages.css
+++ b/src/css/allpages.css
@@ -1,8 +1,14 @@
 /* 
 	---------------------------------------------
-	Imgur gallery classes
+	Imgur classes
 	---------------------------------------------
 */
+
+.imgur {
+	display: inline-block;
+	/* Prevent gallery buttons from wrapping around div */
+	min-width: 51%; 
+}
 
 .imgur_gallery {
 	display: inline-block;
